final mvp 1 all good, fixed bug that makes color drag off screen

--- a/canvas.css
+++ b/canvas.css
@@ -9,7 +9,7 @@ canvas {
 	background: linear-gradient(AliceBlue, LavenderBlush);
 }
 
-#butt{
+.butt{
 	height: 70px;
     width: 70px;
 	margin: 1;
